<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Registration">

    <TextView
        android:id="@+id/regitext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:text="@string/reg"
        android:textSize="26sp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:textAlignment="center"

        />

    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/regitext"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="50dp"
        android:layout_marginRight="30dp"
        android:ems="10"
        android:hint="@string/usnev"
        android:inputType="textPersonName"

        />

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/username"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="40dp"
        android:layout_marginRight="30dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"

        />

    <EditText
        android:id="@+id/mobil"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/email"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="40dp"
        android:layout_marginRight="30dp"
        android:ems="10"
        android:hint="@string/phone"
        android:inputType="phone"

        />
    <EditText
        android:id="@+id/Pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/mobil"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:ems="10"
        android:hint="@string/pass"
        android:inputType="textPassword"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"

        />
    <EditText
        android:id="@+id/Pass2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Pass"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:ems="10"
        android:hint="@string/pass2"
        android:inputType="textPassword"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"

        />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Pass2"
        android:layout_marginTop="40dp"
        android:onClick="Reging"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:ems="10"
        android:text="@string/reg"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        />

    <Button
        android:id="@+id/megse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="30dp"
        android:ems="10"
        android:onClick="Cancel"
        android:text="@string/cancel" />

    <TextView
        android:id="@+id/valasz"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/regitext"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="1dp"
        android:layout_marginRight="30dp"
        android:text=""
        android:textAlignment="center"
        android:textColor="#5FF402" />

</RelativeLayout>